--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </script>
 
     <div class="picture">
-      <img src="images/soren.png" class="sorenimg">
+      <img src="images/SOREN.png" class="sorenimg">
     </div>
 
     <div class="title">
